Implement base functionality

--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "license": "MIT",
     "scripts": {
         "eslint": "eslint ./src --resolve-plugins-relative-to . --cache --no-error-on-unmatched-pattern --ext .ts",
-        "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' -r dotenv/config -r tsconfig-paths/register src/index.ts"
+        "start": "nodemon --delay 500ms --watch src -e ts --exec 'ts-node' -r dotenv/config -r tsconfig-paths/register src/index.ts"
     },
     "dependencies": {
         "axios": "^0.21.1",
         "dotenv": "^10.0.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "lodash": "^4.17.21",
+        "luxon": "^2.0.2"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
+        "@types/lodash": "^4.14.172",
+        "@types/luxon": "^2.0.1",
         "@types/node": "^16.3.3",
         "@typescript-eslint/eslint-plugin": "^4.28.4",
         "@typescript-eslint/parser": "^4.28.4",
@@ -45,15 +49,20 @@
         ],
         "rules": {
             "quotes": [
-                2,
+                "error",
                 "single",
                 "avoid-escape"
             ],
             "semi": [
-                2,
+                "error",
                 "always"
             ],
-            "no-console": 0
+            "indent": [
+                "error",
+                4
+            ],
+            "no-console": "off",
+            "@typescript-eslint/no-misused-promises": "off"
         },
         "ignorePatterns": [
             "node_modules",
