--- a/package.json
+++ b/package.json
@@ -61,6 +61,12 @@
                 "error",
                 4
             ],
+            "@typescript-eslint/no-unused-vars": [
+                "error", 
+                {
+                    "argsIgnorePattern": "^_"
+                }
+            ],
             "no-console": "off",
             "@typescript-eslint/no-misused-promises": "off"
         },
