WIP: init monorepo setup setup

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-HOST_PORT=4000
+SERVER_PORT=4000
+CLIENT_PORT=3000
 CONTAINER_PORT=3000
 TEMPO_REST_API_ENDPOINT=https://api.tempo.io/core/3/worklogs
