--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,33 @@
 version: '3.7'
 services:
-  app:
-    build: .
-    command: yarn start
-    volumes:
-      - .:/usr/app/
-      - /usr/app/node_modules
+  server:
+    build:
+      context: ./server
+    container_name: server
+    command: yarn dev
     ports:
-      - "${HOST_PORT}:${CONTAINER_PORT}"
+      - "${SERVER_PORT}:${CONTAINER_PORT}"
+    environment:
+      - SERVER_PORT=${SERVER_PORT}
+      - CONTAINER_PORT=${CONTAINER_PORT}
+      - TEMPO_REST_API_ENDPOINT=${TEMPO_REST_API_ENDPOINT}
+    volumes:
+      - ./server:/usr/app/server
+      - /usr/app/server/node_modules
+    networks:
+      - app_network
+  client:
+    build:
+      context: ./client
+    container_name: client
+    command: yarn dev
+    ports:
+      - "${CLIENT_PORT}:${CONTAINER_PORT}"
+    volumes:
+       - ./client:/usr/app/client
+       - /usr/app/client/node_modules
+    networks:
+      - app_network
+networks:
+  app_network:
+    external: true
