--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,27 @@
         "eslint": "next lint"
     },
     "dependencies": {
+        "axios": "^0.22.0",
+        "bootstrap": "^5.1.1",
         "next": "11.1.2",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-bootstrap": "^2.0.0-rc.0",
+        "react-dom": "17.0.2",
+        "react-hook-form": "^7.17.0",
+        "react-toastify": "^8.0.3"
     },
     "devDependencies": {
         "@types/react": "17.0.26",
+        "@typescript-eslint/eslint-plugin": "^4.32.0",
+        "@typescript-eslint/parser": "^4.32.0",
         "eslint": "7.32.0",
+        "eslint-config-airbnb": "^18.2.1",
         "eslint-config-next": "11.1.2",
+        "eslint-plugin-flowtype": "6.1.0",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jsx-a11y": "6.4.1",
+        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
         "typescript": "4.4.3"
     }
 }
