--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "client"
     ],
     "scripts": {
-        "dev": "docker network create app_network; docker-compose up"
+        "dev": "yarn workspaces run dev"
     },
     "devDependencies": {
         "husky": "^7.0.2"
