--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,10 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "eslint": "eslint ./ --resolve-plugins-relative-to . --cache --no-error-on-unmatched-pattern --ext .ts",
-        "dev": "nodemon --delay 500ms --watch ./ -e ts --exec 'ts-node' -r dotenv/config -r tsconfig-paths/register index.ts"
+        "dev": "nodemon --delay 500ms --watch ./ -e ts --exec 'ts-node' -r dotenv/config -r tsconfig-paths/register index.ts",
+        "build": "tsc",
+        "start": "NODE_PATH=dist/ node dist/index.js",
+        "eslint": "eslint ./ --resolve-plugins-relative-to . --cache --no-error-on-unmatched-pattern --ext .ts"
     },
     "dependencies": {
         "axios": "^0.21.1",
