--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
         "react-bootstrap": "^2.0.0-rc.0",
         "react-dom": "17.0.2",
         "react-hook-form": "^7.17.0",
-        "react-toastify": "^8.0.3"
+        "react-toastify": "^8.0.3",
+        "reactjs-popup": "^2.0.5",
+        "sass": "^1.42.1"
     },
     "devDependencies": {
         "@types/react": "17.0.26",
