Resolve an issue with tsconfig imports

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -23,7 +23,7 @@
   "ignorePatterns": ["next.config.js"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-      "project": "./tsconfig.json",
+      "project": "client/tsconfig.json",
       "sourceType": "module",
       "ecmaVersion": 2018,
       "ecmaFeatures": {
