--- a/server/package.json
+++ b/server/package.json
@@ -36,7 +36,7 @@
     "eslintConfig": {
         "parser": "@typescript-eslint/parser",
         "parserOptions": {
-            "project": "./tsconfig.json"
+            "project": "server/tsconfig.json"
         },
         "plugins": [
             "@typescript-eslint",
